# price-radar

./: Dockerfile  README.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
dns_parser/: README.md  pyproject.toml  test-2.json
dns_parser/src/dns_parser/: __init__.py  driver_storage.py  helpers.py
dns_parser/src/dns_parser/categories/: categories.py
src/web/: package.json
web/: package-lock.json  package.json  tailwind.config.js
web/app/: layout.tsx  page.tsx
web/app/common/header/: index.tsx
