[project]
name = "dns_parser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dsavelyev", email = "kriper0nind@gmail.com"},
]
dependencies = ["selenium>=4.39.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
